Fix: Switch to signInWithRedirect and enable withdrawals

--- a/index.html
+++ b/index.html
@@ -365,13 +365,13 @@
     <!-- Using ES Modules via Import Map is cleaner for modern browsers -->
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
-        import { getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
+        import { getAuth, GoogleAuthProvider, signInWithPopup, signInWithRedirect, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
         import { getFirestore, doc, getDoc, setDoc, updateDoc, collection, query, where, onSnapshot, addDoc, serverTimestamp, increment, getDocs, orderBy, limit } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
 
         // Expose to window for app.js to use (simplifying scope for this prototype)
         window.firebaseModules = {
             initializeApp,
-            getAuth, GoogleAuthProvider, signInWithPopup, signOut, onAuthStateChanged,
+            getAuth, GoogleAuthProvider, signInWithPopup, signInWithRedirect, signOut, onAuthStateChanged,
             getFirestore, doc, getDoc, setDoc, updateDoc, collection, query, where, onSnapshot, addDoc, serverTimestamp, increment, getDocs, orderBy, limit
         };
     </script>
