--- a/index.html
+++ b/index.html
@@ -317,11 +317,11 @@
                                 placeholder="0.00" required>
                         </div>
                     </div>
-                    <div>
+                    <div class="mb-4">
                         <label class="block text-sm font-medium text-slate-700 mb-1">Description</label>
                         <input type="text" id="input-description"
-                            class="w-full px-4 py-2 rounded-xl border border-slate-200 focus:ring-2 focus:ring-brand-500 outline-none"
-                            placeholder="e.g. Chores, Birthday gift" required>
+                            class="w-full px-4 py-3 rounded-xl border border-slate-300 focus:ring-2 focus:ring-brand-500 focus:border-brand-500 outline-none transition-all"
+                            placeholder="What's this for? (Optional)">
                     </div>
                     <div class="flex gap-2 pt-2">
                         <button type="button" onclick="closeModal()"
@@ -360,28 +360,71 @@
                 </div>
             </form>
         </div>
-    </div>
+        <!-- Interest Modal -->
+        <div id="modal-interest"
+            class="fixed inset-0 bg-slate-900/50 backdrop-blur-sm hidden flex items-center justify-center z-50 p-4">
+            <div
+                class="bg-white rounded-3xl shadow-2xl w-full max-w-md overflow-hidden transform transition-all scale-100">
+                <div class="bg-brand-50 p-6 border-b border-brand-100">
+                    <h3 class="text-xl font-bold text-brand-900">Set Interest Rate</h3>
+                    <p class="text-brand-600 text-sm mt-1">Customize savings growth</p>
+                </div>
+                <form id="form-interest" class="p-6">
+                    <input type="hidden" id="modal-interest-kid-id">
+                    <div class="space-y-4">
+                        <div>
+                            <label class="block text-sm font-medium text-slate-700 mb-1">Yearly Interest Rate
+                                (APY)</label>
+                            <div class="relative">
+                                <input type="number" id="input-interest-rate" step="0.01" min="0" max="100"
+                                    class="w-full pl-4 pr-12 py-3 rounded-xl border border-slate-300 focus:ring-2 focus:ring-brand-500 focus:border-brand-500 outline-none transition-all"
+                                    placeholder="5.0" required>
+                                <span class="absolute right-4 top-3.5 text-slate-400 font-medium">%</span>
+                            </div>
+                            <p class="text-xs text-slate-400 mt-2">Default is 5%. Rate is applied monthly (1/12th).</p>
+                        </div>
+                        <div class="flex gap-2 pt-2">
+                            <button type="button" onclick="closeInterestModal()"
+                                class="flex-1 px-4 py-2 text-slate-600 font-medium hover:bg-slate-50 rounded-xl transition-colors">Cancel</button>
+                            <button type="submit"
+                                class="flex-1 px-4 py-2 bg-brand-600 text-white font-medium rounded-xl hover:bg-brand-700 shadow-md shadow-brand-500/20 transition-colors">Save
+                                Rate</button>
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
 
-    <!-- Firebase Scripts (Compat for easier CDN usage without build step, using Modular syntax where possible or Compat if easier for quick prototype, but Modular is recommended now. I will use Modular SDK via CDN) -->
-    <!-- Using ES Modules via Import Map is cleaner for modern browsers -->
-    <script type="module">
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
-        import { getAuth, GoogleAuthProvider, signInWithPopup, signInWithRedirect, getRedirectResult, signOut, onAuthStateChanged, setPersistence, browserLocalPersistence } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
-        import { getFirestore, doc, getDoc, setDoc, updateDoc, collection, query, where, onSnapshot, addDoc, serverTimestamp, increment, getDocs, orderBy, limit } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
+        <!-- Footer -->
+        <footer class="text-center py-6 text-slate-400 text-sm">
+            <p>&copy; 2024 FutureVault. All rights reserved.</p>
+            <p class="mt-1">
+                Made by <a href="https://ishaan-ku.github.io" target="_blank"
+                    class="text-brand-500 hover:text-brand-600 font-medium">Ishaan Kumar</a>
+            </p>
+        </footer>
 
-        // Expose to window for app.js to use
-        window.firebaseModules = {
-            initializeApp,
-            getAuth, GoogleAuthProvider, signInWithPopup, signInWithRedirect, getRedirectResult, signOut, onAuthStateChanged, setPersistence, browserLocalPersistence,
-            getFirestore, doc, getDoc, setDoc, updateDoc, collection, query, where, onSnapshot, addDoc, serverTimestamp, increment, getDocs, orderBy, limit
-        };
-    </script>
 
-    <script src="js/firebase-config.js" defer></script>
-    <script src="js/db.js" defer></script>
-    <script src="js/auth.js" defer></script>
-    <script src="js/app.js" defer></script>
-    <script src="js/test-mode.js" defer></script>
+        <!-- Firebase Scripts (Compat for easier CDN usage without build step, using Modular syntax where possible or Compat if easier for quick prototype, but Modular is recommended now. I will use Modular SDK via CDN) -->
+        <!-- Using ES Modules via Import Map is cleaner for modern browsers -->
+        <script type="module">
+            import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
+            import { getAuth, GoogleAuthProvider, signInWithPopup, signInWithRedirect, getRedirectResult, signOut, onAuthStateChanged, setPersistence, browserLocalPersistence } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
+            import { getFirestore, doc, getDoc, setDoc, updateDoc, collection, query, where, onSnapshot, addDoc, serverTimestamp, increment, getDocs, orderBy, limit, arrayUnion } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
+
+            // Expose to window for app.js to use
+            window.firebaseModules = {
+                initializeApp,
+                getAuth, GoogleAuthProvider, signInWithPopup, signInWithRedirect, getRedirectResult, signOut, onAuthStateChanged, setPersistence, browserLocalPersistence,
+                getFirestore, doc, getDoc, setDoc, updateDoc, collection, query, where, onSnapshot, addDoc, serverTimestamp, increment, getDocs, orderBy, limit, arrayUnion
+            };
+        </script>
+
+        <script src="js/firebase-config.js" defer></script>
+        <script src="js/db.js" defer></script>
+        <script src="js/auth.js" defer></script>
+        <script src="js/app.js" defer></script>
+        <script src="js/test-mode.js" defer></script>
 </body>
 
 </html>
