Fix: Add missing closing div tag to fix modal nesting

--- a/index.html
+++ b/index.html
@@ -357,6 +357,7 @@
                         <button type="submit"
                             class="flex-1 px-4 py-2 bg-brand-600 text-white font-medium rounded-xl hover:bg-brand-700 shadow-md shadow-brand-500/20 transition-colors">Save</button>
                     </div>
+                </div>
             </form>
         </div>
     </div>
