--- a/index.html
+++ b/index.html
@@ -278,10 +278,16 @@
                         <p class="text-xs text-brand-100 uppercase tracking-wider font-semibold">Allowance</p>
                         <p class="font-bold text-lg" id="kid-allowance-display">$0/week</p>
                     </div>
-                    <button id="btn-kid-spend"
-                        class="bg-white text-brand-600 px-6 py-2 rounded-xl font-bold shadow-lg hover:bg-brand-50 transition-colors">
-                        Spend Money
-                    </button>
+                    <div class="flex gap-2">
+                        <button id="btn-kid-spend"
+                            class="flex-1 bg-white text-brand-600 px-4 py-3 rounded-xl font-bold shadow-lg hover:bg-brand-50 transition-colors text-sm">
+                            Spend
+                        </button>
+                        <button id="btn-kid-transfer"
+                            class="flex-1 bg-blue-500 text-white px-4 py-3 rounded-xl font-bold shadow-lg hover:bg-blue-600 transition-colors text-sm">
+                            Send to Friend
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -411,15 +417,58 @@
     <script type="module">
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-app.js";
         import { getAuth, GoogleAuthProvider, signInWithPopup, signInWithRedirect, getRedirectResult, signOut, onAuthStateChanged, setPersistence, browserLocalPersistence } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-auth.js";
-        import { getFirestore, doc, getDoc, setDoc, updateDoc, collection, query, where, onSnapshot, addDoc, serverTimestamp, increment, getDocs, orderBy, limit, arrayUnion } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
+        import { getFirestore, doc, getDoc, setDoc, updateDoc, collection, query, where, onSnapshot, addDoc, serverTimestamp, increment, getDocs, orderBy, limit, arrayUnion, runTransaction } from "https://www.gstatic.com/firebasejs/10.8.0/firebase-firestore.js";
 
         // Expose to window for app.js to use
         window.firebaseModules = {
             initializeApp,
             getAuth, GoogleAuthProvider, signInWithPopup, signInWithRedirect, getRedirectResult, signOut, onAuthStateChanged, setPersistence, browserLocalPersistence,
-            getFirestore, doc, getDoc, setDoc, updateDoc, collection, query, where, onSnapshot, addDoc, serverTimestamp, increment, getDocs, orderBy, limit, arrayUnion
+            getFirestore, doc, getDoc, setDoc, updateDoc, collection, query, where, onSnapshot, addDoc, serverTimestamp, increment, getDocs, orderBy, limit, arrayUnion, runTransaction
         };
     </script>
+
+    <!-- Transfer Modal -->
+    <div id="modal-transfer"
+        class="fixed inset-0 bg-slate-900/50 backdrop-blur-sm hidden flex items-center justify-center z-50 p-4">
+        <div class="bg-white rounded-3xl shadow-2xl w-full max-w-md overflow-hidden transform transition-all scale-100">
+            <div class="bg-blue-50 p-6 border-b border-blue-100">
+                <h3 class="text-xl font-bold text-blue-900">Send Money to a Friend</h3>
+                <p class="text-blue-600 text-sm mt-1">Share with other kids on FutureVault</p>
+            </div>
+            <form id="form-transfer" class="p-6">
+                <input type="hidden" id="modal-transfer-from-id">
+                <div class="space-y-4">
+                    <div>
+                        <label class="block text-sm font-medium text-slate-700 mb-1">Friend's Email</label>
+                        <input type="email" id="input-transfer-email"
+                            class="w-full px-4 py-3 rounded-xl border border-slate-300 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition-all"
+                            placeholder="friend@example.com" required>
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-slate-700 mb-1">Amount</label>
+                        <div class="relative">
+                            <span class="absolute left-3 top-3.5 text-slate-400">$</span>
+                            <input type="number" id="input-transfer-amount" step="0.01" min="0.01"
+                                class="w-full pl-8 pr-4 py-3 rounded-xl border border-slate-300 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition-all"
+                                placeholder="0.00" required>
+                        </div>
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-slate-700 mb-1">Note</label>
+                        <input type="text" id="input-transfer-desc"
+                            class="w-full px-4 py-3 rounded-xl border border-slate-300 focus:ring-2 focus:ring-blue-500 focus:border-blue-500 outline-none transition-all"
+                            placeholder="Pizza, Gift, etc." required>
+                    </div>
+                    <div class="flex gap-2 pt-2">
+                        <button type="button" onclick="closeTransferModal()"
+                            class="flex-1 px-4 py-2 text-slate-600 font-medium hover:bg-slate-50 rounded-xl transition-colors">Cancel</button>
+                        <button type="submit"
+                            class="flex-1 px-4 py-2 bg-blue-600 text-white font-medium rounded-xl hover:bg-blue-700 shadow-md shadow-blue-500/20 transition-colors">Send</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 
     <script src="js/firebase-config.js" defer></script>
     <script src="js/db.js" defer></script>
