--- a/index.html
+++ b/index.html
@@ -324,6 +324,98 @@
                         Move Money
                     </button>
                 </div>
+
+                <!-- Card Management (Kid View) -->
+                <div
+                    class="md:col-span-2 bg-slate-900 rounded-3xl p-8 text-white shadow-2xl relative overflow-hidden group">
+                    <!-- Decor -->
+                    <div class="absolute top-0 right-0 w-64 h-64 bg-white/5 rounded-full -mr-16 -mt-16 blur-2xl"></div>
+
+                    <div
+                        class="flex flex-col md:flex-row justify-between items-start md:items-center gap-6 relative z-10">
+                        <div>
+                            <h3 class="text-2xl font-bold mb-1">My FutureCard</h3>
+                            <p class="text-slate-400 text-sm mb-6">Use this online or in stores</p>
+
+                            <div class="flex items-center gap-4">
+                                <div class="bg-white/10 px-4 py-2 rounded-lg backdrop-blur-sm border border-white/10 font-mono text-lg tracking-widest"
+                                    id="kid-card-number">
+                                    •••• •••• •••• 1234
+                                </div>
+                                <button class="text-sm text-brand-400 hover:text-brand-300 font-medium"
+                                    id="btn-view-card">Show Details</button>
+                            </div>
+                        </div>
+
+                        <div class="flex flex-col items-end">
+                            <div id="kid-card-status"
+                                class="flex items-center gap-2 bg-green-500/20 text-green-400 px-3 py-1 rounded-full text-xs font-bold uppercase tracking-wider mb-4 border border-green-500/30">
+                                <span class="w-2 h-2 rounded-full bg-green-500"></span> Active
+                            </div>
+                            <img src="https://raw.githubusercontent.com/google/material-design-icons/master/png/action/payment/materialicons/24dp/2x/baseline_payment_white_24dp.png"
+                                class="opacity-50 w-12" alt="Chip">
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Learn & Earn Section -->
+                <div class="md:col-span-2 bg-indigo-600 rounded-3xl p-8 text-white shadow-xl shadow-indigo-500/30 relative overflow-hidden"
+                    id="section-quizzes">
+                    <div class="absolute top-0 left-0 w-64 h-64 bg-white/10 rounded-full -ml-16 -mt-16 blur-2xl"></div>
+                    <div class="relative z-10 flex flex-col md:flex-row justify-between items-center gap-6">
+                        <div>
+                            <div class="flex items-center gap-2 mb-2">
+                                <span
+                                    class="bg-yellow-400 text-yellow-900 text-xs font-bold px-2 py-1 rounded-full uppercase tracking-wider">New</span>
+                                <h3 class="text-2xl font-bold">Learn & Earn</h3>
+                            </div>
+                            <p class="text-indigo-100 max-w-md">Take short quizzes about money to earn real cash
+                                rewards! Show your parents how smart you are.</p>
+                        </div>
+                        <button id="btn-start-quiz"
+                            class="bg-white text-indigo-600 px-6 py-3 rounded-xl font-bold hover:bg-indigo-50 transition-colors shadow-lg">
+                            Start Quiz 🧠
+                        </button>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Savings Goals Section -->
+            <div>
+                <div class="flex justify-between items-center mb-4">
+                    <h3 class="text-xl font-bold text-slate-800">Savings Goals</h3>
+                    <button id="btn-add-goal"
+                        class="text-sm font-bold text-brand-600 bg-brand-50 hover:bg-brand-100 px-3 py-1.5 rounded-lg transition-colors border border-brand-200">
+                        + New Goal
+                    </button>
+                </div>
+                <!-- Goals Grid -->
+                <div id="kid-goals-list" class="grid grid-cols-2 sm:grid-cols-3 gap-4">
+                    <!-- Goal Card Template (JS) -->
+                    <div
+                        class="p-6 text-center text-slate-400 bg-slate-50 rounded-2xl border border-dashed border-slate-300">
+                        Loading goals...
+                    </div>
+                </div>
+            </div>
+
+            <!-- Savings Goals Section -->
+            <div>
+                <div class="flex justify-between items-center mb-4">
+                    <h3 class="text-xl font-bold text-slate-800">Savings Goals</h3>
+                    <button id="btn-add-goal"
+                        class="text-sm font-bold text-brand-600 bg-brand-50 hover:bg-brand-100 px-3 py-1.5 rounded-lg transition-colors border border-brand-200">
+                        + New Goal
+                    </button>
+                </div>
+                <!-- Goals Grid -->
+                <div id="kid-goals-list" class="grid grid-cols-2 sm:grid-cols-3 gap-4">
+                    <!-- Goal Card Template (JS) -->
+                    <div
+                        class="p-6 text-center text-slate-400 bg-slate-50 rounded-2xl border border-dashed border-slate-300">
+                        Loading goals...
+                    </div>
+                </div>
             </div>
 
             <!-- Transactions -->
@@ -510,6 +602,107 @@
                         <button type="submit"
                             class="flex-1 px-4 py-2 bg-blue-600 text-white font-medium rounded-xl hover:bg-blue-700 shadow-md shadow-blue-500/20 transition-colors">Send</button>
                     </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- New Goal Modal -->
+    <div id="modal-new-goal"
+        class="fixed inset-0 bg-slate-900/50 backdrop-blur-sm hidden flex items-center justify-center z-50 p-4">
+        <div class="bg-white rounded-3xl shadow-2xl w-full max-w-md overflow-hidden transform transition-all scale-100">
+            <div class="bg-indigo-50 p-6 border-b border-indigo-100">
+                <h3 class="text-xl font-bold text-indigo-900">New Savings Goal</h3>
+                <p class="text-indigo-600 text-sm mt-1">What are you saving for?</p>
+            </div>
+            <form id="form-new-goal" class="p-6">
+                <div class="space-y-4">
+                    <div>
+                        <label class="block text-sm font-medium text-slate-700 mb-1">Goal Name</label>
+                        <input type="text" id="input-goal-name"
+                            class="w-full px-4 py-3 rounded-xl border border-slate-300 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition-all"
+                            placeholder="Lego Set, New Game, etc." required>
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-slate-700 mb-1">Target Amount</label>
+                        <div class="relative">
+                            <span class="absolute left-3 top-3.5 text-slate-400">$</span>
+                            <input type="number" id="input-goal-amount" step="1" min="1"
+                                class="w-full pl-8 pr-4 py-3 rounded-xl border border-slate-300 focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none transition-all"
+                                placeholder="50" required>
+                        </div>
+                    </div>
+                    <div>
+                        <label class="block text-sm font-medium text-slate-700 mb-1">Pick an Icon</label>
+                        <div class="grid grid-cols-5 gap-2" id="goal-icon-selector">
+                            <button type="button"
+                                class="p-2 text-xl bg-indigo-50 rounded-lg border-2 border-indigo-500 hover:bg-indigo-100"
+                                data-icon="🚲">🚲</button>
+                            <button type="button"
+                                class="p-2 text-xl bg-white rounded-lg border border-slate-200 hover:bg-slate-50"
+                                data-icon="🎮">🎮</button>
+                            <button type="button"
+                                class="p-2 text-xl bg-white rounded-lg border border-slate-200 hover:bg-slate-50"
+                                data-icon="lego">🧱</button>
+                            <button type="button"
+                                class="p-2 text-xl bg-white rounded-lg border border-slate-200 hover:bg-slate-50"
+                                data-icon="🎸">🎸</button>
+                            <button type="button"
+                                class="p-2 text-xl bg-white rounded-lg border border-slate-200 hover:bg-slate-50"
+                                data-icon="📱">📱</button>
+                        </div>
+                        <input type="hidden" id="input-goal-icon" value="🚲">
+                    </div>
+
+                    <div class="flex gap-2 pt-2">
+                        <button type="button" onclick="closeNewGoalModal()"
+                            class="flex-1 px-4 py-2 text-slate-600 font-medium hover:bg-slate-50 rounded-xl transition-colors">Cancel</button>
+                        <button type="submit"
+                            class="flex-1 px-4 py-2 bg-indigo-600 text-white font-medium rounded-xl hover:bg-indigo-700 shadow-md shadow-indigo-500/20 transition-colors">Create
+                            Goal</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- Contribute to Goal Modal -->
+    <div id="modal-contribute-goal"
+        class="fixed inset-0 bg-slate-900/50 backdrop-blur-sm hidden flex items-center justify-center z-50 p-4">
+        <div class="bg-white rounded-3xl shadow-2xl w-full max-w-md overflow-hidden transform transition-all scale-100">
+            <div class="bg-green-50 p-6 border-b border-green-100">
+                <h3 class="text-xl font-bold text-green-900">Add to Goal</h3>
+                <p class="text-green-600 text-sm mt-1">Move money from Savings to this Goal</p>
+            </div>
+            <form id="form-contribute-goal" class="p-6">
+                <input type="hidden" id="modal-contribute-goal-id">
+                <div class="space-y-4">
+                    <div class="bg-slate-50 p-4 rounded-xl text-center">
+                        <p class="text-xs text-slate-400 uppercase font-bold tracking-wider mb-1">Available in Savings
+                        </p>
+                        <p class="text-2xl font-bold text-slate-800" id="contribute-available-balance">$0.00</p>
+                    </div>
+
+                    <div>
+                        <label class="block text-sm font-medium text-slate-700 mb-1">Amount to Add</label>
+                        <div class="relative">
+                            <span class="absolute left-3 top-3.5 text-slate-400">$</span>
+                            <input type="number" id="input-contribute-amount" step="0.01" min="0.01"
+                                class="w-full pl-8 pr-4 py-3 rounded-xl border border-slate-300 focus:ring-2 focus:ring-green-500 focus:border-green-500 outline-none transition-all"
+                                placeholder="0.00" required>
+                        </div>
+                    </div>
+
+                    <div class="flex gap-2 pt-2">
+                        <button type="button" onclick="closeContributeGoalModal()"
+                            class="flex-1 px-4 py-2 text-slate-600 font-medium hover:bg-slate-50 rounded-xl transition-colors">Cancel</button>
+                        <button type="submit"
+                            class="flex-1 px-4 py-2 bg-green-600 text-white font-medium rounded-xl hover:bg-green-700 shadow-md shadow-green-500/20 transition-colors">Add
+                            Money</button>
+                    </div>
+                    <button type="button" id="btn-withdraw-goal"
+                        class="w-full text-center text-xs text-red-400 hover:text-red-500 mt-2 font-medium">Need to take
+                        money out?</button>
                 </div>
             </form>
         </div>
